// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`I18nCollectiveTags can ignore untranslated 1`] = `
[
  "Open source, ",
  "Meetup",
]
`;

exports[`I18nCollectiveTags can provide a custom renderer 1`] = `
[
  <div>
    HelloWorld
     is 
    untranslated
  </div>,
  <div>
    Meetup
     is 
    translated
  </div>,
]
`;

exports[`I18nCollectiveTags renders a list of tag 1`] = `"Open source"`;

exports[`I18nCollectiveTags renders a list of tag 2`] = `
[
  "not translated, ",
  "Open source, ",
  "Meetup",
]
`;

exports[`I18nCollectiveTags renders a single tag 1`] = `"Open source"`;

exports[`I18nCollectiveTags renders a single tag 2`] = `"not translated"`;
